# sec-rag-platform

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
evals/: golden_queries.jsonl  run_eval.py
evals/graders/: decomposition_grader.py  generation_grader.py  refusal_grader.py
src/ingestion/: advanced_ingestion.py  fetch_edgar_data.py  initialize_collection.py
src/orchestration/: executor.py  graph.py  planner.py  router.py  state.py  synthesis.py
src/retrieval/: advanced_retrieval_api_largeContextFix.py  api.py  core.py  models.py
